--- a/index.html
+++ b/index.html
@@ -10,5 +10,32 @@
     <link rel="stylesheet"  href="styles/style.css">
 
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <a class="header__logo">
+        <img 
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Оно тебе надо"
+        />
+      </a>
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link" href="#0">Главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link_active" href="#0">Посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link_active" href="#0">Об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <cover></cover>
+    <about></about>
+    <footer></footer>  
+  </body>
 </html>
