--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
   </head>
   <body>
     <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit header__link_active">
+            <a class="header__link" href="#0" >Главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">Посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">Об аукционе</a>
+          </li>
+        </ul>
+      </nav>
       <a class="header__logo">
         <img 
           class="header__logo-image"
@@ -19,19 +32,20 @@
           alt="Оно тебе надо"
         />
       </a>
-      <nav class="header__menu">
-        <ul class="header__links-list">
+      <address class="address">
+        <ul class="header__address">
+          <li class="header__links-list-item_no-bullit ">
+            <a class="header__link" href="tel:+9 999 555 5555">+9 999 555 5555</a> 
+          </li>
           <li class="header__links-list-item_no-bullit">
-            <a class="header__link" href="#0">Главная</a>
+              <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a> 
           </li>
-          <li class="header__links-list-item">
-            <a class="header__link_active" href="#0">Посмотреть лоты</a>
-          </li>
-          <li class="header__links-list-item">
-            <a class="header__link_active" href="#0">Об аукционе</a>
+          <li class="header__links-list-item_no-bullit header__link_active">
+            <a class="header__link" href="#0">наб. Принсенграхт 263-265, 
+              <br> Амстердам</a>
           </li>
         </ul>
-      </nav>
+      </address>
     </header>
     <main></main>
     <cover></cover>
