--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active">главная</a>
+            <a class="header__link header__link_active" href="0#">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#">посмотреть лоты</a>
+            <a class="header__link" href="0#">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#">об аукционе</a>
+            <a class="header__link" href="0#">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -72,13 +72,13 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
+            <a class="card-link" href="0#">
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
-                <p class="card__text">
+                <p class="about__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
@@ -87,13 +87,13 @@
             </a>
           </li>
            <li class="lots__card-list-item">
-            <a class="card-link" href="#">
+            <a class="card-link" href="0#">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
-                <p class="card__text">
+                <p class="about__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
                   рассказывается о 16 июня 1904 года и об истории литературы,
@@ -105,13 +105,13 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
+            <a class="card-link" href="0#">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
-                <p class="card__text">
+                <p class="about__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков… Сколько бы вы на такое поставили, если бы не знали,
@@ -121,7 +121,7 @@
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+        <a class="lots__look-more-link" href="0#">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__logo">
@@ -135,21 +135,23 @@
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text">
+          <text class="about__text">
+            <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
-          </p>
-          <p class="about__text">
+            </p>
+            <p>
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику,
             кажущуюся простоту или сложность, сейчас без этих лотов невозможно
             представить современную культуру. Когда в эти вещи не верил никто,
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </p>
+            </p>
+          </text>
         </div>
       </section>
     </main>
@@ -167,13 +169,13 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active">главная</a>
+            <a class="footer__menu-link" href="0#">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">посмотреть лоты</a>
+            <a class="footer__menu-link" href="0#">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">об аукционе</a>
+            <a class="footer__menu-link footer__menu-link_active" href="0#">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -181,7 +183,7 @@
         <li class="footer__social-list-item">
           <a
             class="footer__social-link"
-            href="#"
+            href="0#"
             aria-label="Оно тебе надо на YouTube"
             target="_blank"
           >
@@ -197,7 +199,7 @@
         <li class="footer__social-list-item">
           <a
             class="footer__social-link"
-            href="#"
+            href="0#"
             aria-label="Оно тебе надо в VK"
             target="_blank"
           >
@@ -213,7 +215,7 @@
         <li class="footer__social-list-item">
           <a
             class="footer__social-link"
-            href="#"
+            href="0#"
             aria-label="Оно тебе надо на Pinterest"
             target="_blank"
           >
