--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
-          <text class="about__text">
+          <span class="about__text">
             <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
@@ -151,7 +151,7 @@
             представить современную культуру. Когда в эти вещи не верил никто,
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
             </p>
-          </text>
+          </span>
         </div>
       </section>
     </main>
